# bookstore_project

./: .gitignore  pyproject.toml
book/: dummy_books.csv  forms.py  models.py  tests.py  views.py
book/management/commands/: import_books.py
book/management/commands/data/: dummy_books.csv
book/migrations/: 0001_initial.py
bookstore_project/: settings.py  urls.py
